<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/title_dialog"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="start"
            android:padding="@dimen/padding_small"
            android:text="@string/app_name"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/margin_medium"
            tools:ignore="SpUsage" />

        <ImageView
            android:layout_width="@dimen/icon_image_size_small"
            android:layout_height="match_parent"
            android:padding="@dimen/padding_very_small"
            android:src="@drawable/ic_close_white" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        android:text="@string/enter_input_unit"
        android:maxLines="1"
        android:paddingLeft="@dimen/padding_small"
        android:paddingTop="@dimen/padding_large"
        android:paddingRight="@dimen/padding_small"
        android:paddingBottom="@dimen/padding_large"
        android:textSize="@dimen/text_size_large" />

    <LinearLayout
        android:id="@+id/group_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/colorGrayVeryLight"
        android:gravity="end"
        android:orientation="horizontal"
        android:padding="@dimen/padding_very_small"
        android:weightSum="3">

        <com.example.cukcuklitedemo.customview.CustomButton
            android:id="@+id/btn_cancel"
            style="@style/Widget.AppCompat.Button"
            app:color_button_default="@color/colorWhite"
            app:color_button_pressed="@color/colorRed"
            app:color_text_default="@color/colorRed"
            app:color_text_pressed="@color/colorWhite"
            app:corners_radius="10"
            app:title="@string/no_delete_item"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_small"
            android:layout_marginRight="@dimen/margin_small"
            android:layout_weight="1" />

        <com.example.cukcuklitedemo.customview.CustomButton
            android:id="@+id/btn_agree"
            style="@style/Widget.AppCompat.Button"
            app:color_button_default="@color/colorPrimary"
            app:color_button_pressed="@color/colorPrimaryVeryLight"
            app:color_text_default="@color/colorWhite"
            app:corners_radius="10"
            app:title="@string/agree_delete_item"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_small"
            android:layout_marginRight="@dimen/margin_small"
            android:layout_weight="1" />
    </LinearLayout>

</LinearLayout>