<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/tv_title_react_dialog"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="@dimen/padding_small"
            android:text="@string/add_unit"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/margin_medium"
            tools:ignore="SpUsage" />

        <ImageView
            android:id="@+id/iv_close"
            android:layout_width="@dimen/icon_image_size_small"
            android:layout_height="match_parent"
            android:background="@drawable/selector_button_pressed"
            android:padding="@dimen/padding_very_small"
            android:src="@drawable/ic_close_white" />
    </LinearLayout>

    <EditText
        android:id="@+id/et_content_react_dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        android:hint="@string/enter_input_unit"
        android:inputType="text"
        android:maxLines="1"
        android:paddingLeft="@dimen/padding_small"
        android:paddingTop="@dimen/padding_large"
        android:paddingRight="@dimen/padding_small"
        android:paddingBottom="@dimen/padding_large"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/text_size_large" />

    <LinearLayout
        android:id="@+id/group_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/colorGrayVeryLight"
        android:gravity="end"
        android:orientation="horizontal"
        android:padding="@dimen/padding_very_small"
        android:weightSum="2">

        <com.example.cukcuklitedemo.customview.CustomButton
            android:id="@+id/btn_cancel"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_small"
            android:layout_marginRight="@dimen/margin_small"
            android:layout_weight="1"
            app:color_button_default="@color/colorWhite"
            app:color_button_pressed="@color/colorRed"
            app:color_text_default="@color/colorRed"
            app:color_text_pressed="@color/colorWhite"
            app:corners_radius="10"
            app:title="@string/cancel" />

        <com.example.cukcuklitedemo.customview.CustomButton
            android:id="@+id/btn_save"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_small"
            android:layout_marginRight="@dimen/margin_small"
            android:layout_weight="1"
            app:color_button_default="@color/colorPrimary"
            app:color_button_pressed="@color/colorPrimaryVeryLight"
            app:color_text_default="@color/colorWhite"
            app:corners_radius="10"
            app:title="@string/save" />
    </LinearLayout>

</LinearLayout>