<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorWhite"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/colorWhite"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@color/colorWhite"
                android:gravity="center_vertical"
                android:maxLines="1"
                android:paddingStart="@dimen/padding_very_small"
                android:paddingLeft="@dimen/padding_very_small"
                android:text="@string/product_name"
                android:textSize="@dimen/text_size_very_small"
                tools:ignore="RtlSymmetry" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@color/colorWhite"
                android:gravity="center_vertical"
                android:maxLines="1"
                android:text="@string/exact"
                android:textColor="@color/colorRed" />
        </LinearLayout>


        <EditText
            android:id="@+id/et_product_name"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2.5"
            android:background="@color/colorWhite"
            android:gravity="center_vertical|end"
            android:hint="@string/product_name"
            android:inputType="text"
            android:maxLines="1"
            android:paddingStart="@dimen/padding_very_small"
            android:paddingLeft="@dimen/padding_very_small"
            android:paddingEnd="@dimen/padding_small"
            android:paddingRight="@dimen/padding_small"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/text_size_small" />

        <ImageView
            android:layout_width="@dimen/icon_image_size_very_small"
            android:layout_height="@dimen/icon_image_size_small"
            android:background="@color/colorWhite" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:alpha="0.2"
        android:background="@color/colorGray" />

    <LinearLayout
        android:layout_width="match_parent"

        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="@dimen/marign_small"
                android:layout_marginRight="@dimen/marign_small"
                android:background="@color/colorWhite"
                android:gravity="center_vertical"
                android:maxLines="1"
                android:paddingStart="@dimen/padding_very_small"
                android:paddingLeft="@dimen/padding_very_small"
                android:text="@string/price"
                android:textSize="@dimen/text_size_very_small"
                tools:ignore="RtlSymmetry" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_product_price"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2.5"
            android:background="@drawable/ripple_item"
            android:gravity="center_vertical|end"
            android:maxLines="1"
            android:paddingStart="@dimen/padding_very_small"
            android:paddingLeft="@dimen/padding_very_small"
            android:paddingEnd="@dimen/padding_small"
            android:paddingRight="@dimen/padding_small"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/text_size_small" />

        <ImageView
            android:layout_width="@dimen/icon_image_size_very_small"
            android:layout_height="@dimen/icon_image_size_small"
            android:paddingTop="@dimen/padding_small"
            android:paddingEnd="@dimen/padding_very_small"
            android:paddingRight="@dimen/padding_very_small"
            android:paddingBottom="@dimen/padding_small"
            android:src="@drawable/ic_keyboard_arrow_right_gray_24dp"
            tools:ignore="RtlSymmetry" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:alpha="0.2"
        android:background="@color/colorGray" />

    <LinearLayout
        android:layout_width="match_parent"

        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@color/colorWhite"
                android:gravity="center_vertical"
                android:maxLines="1"
                android:paddingStart="@dimen/padding_very_small"
                android:paddingLeft="@dimen/padding_very_small"
                android:text="@string/unit"
                android:textSize="@dimen/text_size_very_small"
                tools:ignore="RtlSymmetry" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@color/colorWhite"
                android:gravity="center_vertical"
                android:maxLines="1"
                android:text="@string/exact"
                android:textColor="@color/colorRed" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_unit"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2.5"
            android:background="@drawable/ripple_item"
            android:gravity="center_vertical|end"
            android:maxLines="1"
            android:paddingStart="@dimen/padding_very_small"
            android:paddingLeft="@dimen/padding_very_small"
            android:paddingEnd="@dimen/padding_small"
            android:paddingRight="@dimen/padding_small"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/text_size_small" />

        <ImageView
            android:layout_width="@dimen/icon_image_size_very_small"
            android:layout_height="@dimen/icon_image_size_small"
            android:paddingTop="@dimen/padding_small"
            android:paddingEnd="@dimen/padding_very_small"
            android:paddingRight="@dimen/padding_very_small"
            android:paddingBottom="@dimen/padding_small"
            android:src="@drawable/ic_keyboard_arrow_right_gray_24dp"
            tools:ignore="RtlSymmetry" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:alpha="0.2"
        android:background="@color/colorGray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:weightSum="4"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="@dimen/marign_small"
                android:layout_marginRight="@dimen/marign_small"
                android:background="@color/colorWhite"
                android:gravity="center_vertical"
                android:maxLines="1"
                android:paddingStart="@dimen/padding_very_small"
                android:paddingLeft="@dimen/padding_very_small"
                android:text="@string/color"
                android:textSize="@dimen/text_size_very_small"
                tools:ignore="RtlSymmetry" />

            <com.example.cukcuklitedemo.customview.CustomIcon
                app:image_icon="@drawable/ic_color_lens_white_24dp"
                app:color_background="@color/colorPrimary"
                android:id="@+id/iv_background_color"
                android:layout_width="@dimen/icon_image_size_medium"
                android:layout_height="@dimen/icon_image_size_medium"
                android:layout_marginRight="@dimen/marign_small"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="horizontal"
            tools:ignore="UseCompoundDrawables">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="@dimen/marign_small"
                android:layout_marginRight="@dimen/marign_small"
                android:background="@color/colorWhite"
                android:gravity="center_vertical"
                android:maxLines="1"
                android:paddingStart="@dimen/padding_very_small"
                android:paddingLeft="@dimen/padding_very_small"
                android:text="@string/iconName"
                android:textSize="@dimen/text_size_very_small"
                tools:ignore="RtlSymmetry" />

            <com.example.cukcuklitedemo.customview.CustomIcon
                app:image_icon="@drawable/ic_color_lens_white_24dp"
                app:color_background="@color/colorPrimary"
                android:id="@+id/iv_icon_product"
                android:layout_width="@dimen/icon_image_size_medium"
                android:layout_height="@dimen/icon_image_size_medium"
                android:layout_marginRight="@dimen/marign_small"
                />
        </LinearLayout>

    </LinearLayout>
</LinearLayout>

